[package]
name = "media_soon"
version = "0.1.0"
edition = "2021"
description = "sIMPLE RUST PROGRAM TO SHOW MEDIA POSSIBILITIES"
# authors = ["K.K.N <maintainers@solana.com>"]
# repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
# homepage = "https://solana.com/"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
# solana-program = "2.0.10"
solana-program = "=2.0.10"


[dev-dependencies]
solana-program-test = "2.0.10"
solana-sdk = "2.0.10"

[lib]
name = "media_soon"
crate-type = ["cdylib", "lib"]
